# gvsoc-engine

./: .gitignore  CMakeLists.txt
cmake/: vp_model.cmake
docs/_ext/: target_docs.py
docs/developer_manual/: component_model.rst  components_registry.py  conf.py  index.rst  tutorials.rst
docs/developer_manual/_ext/: component_pages.py
docs/developer_manual/components/: index.rst
docs/developer_manual/components/ips/pulp/: idma_v2.rst
docs/developer_manual/interfaces/: index.rst  io_v1.rst  io_v2.rst
docs/developer_manual/targets/: index.rst
docs/developer_manual/tutorials/10_how_to_customize_an_interconnect_timing/: Makefile
docs/developer_manual/tutorials/11_how_to_add_an_iss_instruction/: Makefile
docs/developer_manual/tutorials/12_how_to_time_an_iss_instruction/: Makefile
docs/developer_manual/tutorials/15_how_to_build_a_multi-chip_system/: Makefile
docs/developer_manual/tutorials/16_how_to_control_gvsoc_from_a_python_script/: Makefile
docs/developer_manual/tutorials/16_how_to_control_gvsoc_from_a_python_script/solution/: gvcontrol
docs/developer_manual/tutorials/17_how_to_control_gvsoc_from_an_external_simulator/: Makefile
docs/developer_manual/tutorials/1_how_to_write_a_component_from_scratch/: testset.cfg
docs/developer_manual/tutorials/2_how_to_make_components_communicate_together/: testset.cfg
docs/developer_manual/tutorials/3_how_to_add_system_traces_to_a_component/: Makefile
docs/developer_manual/tutorials/5_how_to_add_a_register_map_in_a_component/: Makefile  testset.cfg
docs/developer_manual/tutorials/6_how_to_add_timing/: Makefile  testset.cfg
docs/developer_manual/tutorials/7_how_to_use_the_io_request_interface/: Makefile
docs/user_manual/: .gitignore  conf.py  execution_modes.rst  index.rst  memcheck.rst  remote_control.rst  target_control.rst
docs/user_manual/targets/: index.rst
engine/: CMakeLists.txt
engine/include/gv/: gvsoc.hpp
engine/include/vp/: assert.hpp  block.hpp  component.hpp  component_tree.hpp  controller.hpp  debug_mem.hpp  fault_injector.hpp  mapping_tree.hpp  memcheck.hpp  proxy.hpp  proxy_client.hpp  register.hpp  runtime_config.hpp  signal.hpp  top.hpp
engine/include/vp/clock/: clock_engine.hpp
engine/include/vp/itf/: io.hpp  io_v2.hpp
engine/include/vp/power/: block_power.hpp  power.hpp  power_table.hpp  power_table_convert.hpp
engine/include/vp/time/: time_engine.hpp
engine/include/vp/trace/: block_trace.hpp  implementation.hpp  trace.hpp  trace_engine.hpp
engine/src/: component.cpp  debug_mem.cpp  launcher.cpp  launcher_client.cpp  main.cpp  mapping_tree.cpp  memcheck.cpp  proxy.cpp  proxy_client.cpp  queue.cpp  register.cpp  runtime_config.cpp  systemc_driver.cpp  systemc_driver.hpp  top.cpp
engine/src/clock/: clock_engine.cpp
engine/src/power/: block_power.cpp  power_engine.cpp  power_source.cpp  power_table.cpp  power_trace.cpp
engine/src/time/: time_engine.cpp
engine/src/trace/: event.cpp  trace.cpp  trace_engine.cpp
python/ficlib/: campaign_manager.py
python/gvsoc/: console.py  gui.py  gvsoc_control.py  runner.py  runner_gvrun2.py  signature.py  systree.py  systree_gvrun.py  systree_gvrun2.py
python/reggen/: gen_dv.py  gen_fpv.py  gen_rtl.py  version.py
